modify css link

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./main.css"/>
-  <link rel="stylesheet" href="./mobile.css" media="screen and (max-width:375px)">
-  <link rel="stylesheet" href="./destop.css" media="screen and (min-width:375px)">
+  <link rel="stylesheet" href="./css/main.css"/>
+  <link rel="stylesheet" href="./css/mobile.css" media="screen and (max-width:375px)">
+  <link rel="stylesheet" href="./css/destop.css" media="screen and (min-width:375px)">
   
   <title>Frontend Mentor | Order summary card</title>
 
